deploy: 78fed03770a7f8e43e55bafac47d67e119fb7a29

--- a/css/main.css
+++ b/css/main.css
@@ -228,7 +228,7 @@ sup > a::before,
 html,
 body {
   font-size: 16px;
-  font-family: "SF Pro SC", "SF Pro Text", "SF Pro Icons", PingFang SC, Lantinghei SC, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
+  font-family: sans-serif;
 }
 html,
 body,
@@ -795,7 +795,7 @@ img[srcset] {
 .markdown-body {
   font-size: 1rem;
   margin-bottom: 2rem;
-  font-family: "SF Pro SC", "SF Pro Text", "SF Pro Icons", PingFang SC, Lantinghei SC, Microsoft Yahei, Hiragino Sans GB, Microsoft Sans Serif, WenQuanYi Micro Hei, sans-serif;
+  font-family: sans-serif;
   color: var(--post-text-color);
 }
 .markdown-body h1,
